# mugen-shunkan-eisakubun

./: README.md
apigateway/: Taskfile.yml  main.tf
lambda/: Taskfile.yml  main.tf  mugen-shunkan-eisakubun.py  pyproject.toml
