[tool.poetry]
name = "lambda-mugen-shukan-eisakubun"
version = "0.1.0"
description = ""
authors = ["roronya <roronya628@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.62"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
